@@ -2,14 +2,14 @@
 #
 # Description : Disable services with yes/no answer
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-# Version     : 0.8 (12/Sep/16)
+# Version     : 0.9 (13/Jan/18)
 # Compatible  : Raspberry Pi 1, 2 & 3 (tested), ODROID-C1 (NOT tested)
 #
 # HELP	      · Package chkconfig to see daemon status
 #
 clear
 
-. ../helper.sh || . ./scripts/helper.sh || . ./helper.sh || wget -q 'http://github.com/jmcerrejon/PiKISS/raw/master/scripts/helper.sh'
+. ./scripts/helper.sh || . ./helper.sh || wget -q 'http://github.com/jmcerrejon/PiKISS/raw/master/scripts/helper.sh'
 check_board || { echo "Missing file helper.sh. I've tried to download it for you. Try to run the script again." && exit 1; }
 
 check_board
@@ -66,7 +66,7 @@ services_RPi(){
 	echo -e "\nNTP (Network Time Protocol) daemon.\nTIP: Don't disable if you need time syncronization with internet."
 	read -p "Disable? [y/n] " option
 	case "$option" in
-	    y*) sudo systemctl disable ntp ;;
+	    y*) systemctl disable systemd-timesyncd.service ;;
 	esac
 
 	echo -e "\nTriggerhappy daemon\nTIP: Useless if you don't use keyboard keys like up/down volume, media keys..."
@@ -92,16 +92,10 @@ services_RPi(){
 	case "$option" in
 	    y*) sudo systemctl disable rsyslog ;;
 	esac
-
-	echo -e "\nhdparm - TIP: Useless if you don't use an external USB or HD device continuously"
-	read -p "Disable? [y/n] " option
-	case "$option" in
-	    y*) sudo systemctl disable hdparm ;;
-	esac
 }
 
 echo -e "Disable daemons (even on boot)\n==============================\n"
-free -oh | grep Mem
+free -wth
 
 if [[ ${MODEL} == 'Raspberry Pi' ]]; then
     services_RPi
@@ -109,5 +103,5 @@ elif [[ ${MODEL} == 'ODROID-C1' ]]; then
     services_ODROID
 fi
 
-free -oh | grep Mem
+free -wth
 read -p "Have a nice day and don't blame me!. Press [Enter] to continue..."
