@@ -1,3 +1,14 @@
+(13/01/18)
+==========
+
+· Fixed issue with Tweaks/others script
+
+· Added new packages to Tweaks/removepkg
+
+· Fixed desktop menu entry to PiKISS
+
+· Fixed Tweaks/services
+
 (22/10/17)
 ==========
 
